<resources>
    <string name="app_name">Robot Controller</string>
    <string name="robot_controller">Robot Controller</string>
    <string name="username">Username</string>
    <string name="welcome">Bine ați venit!</string>
    <string name="gps_tracking_app">GPS Tracking App</string>
    <string name="welcome_message">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="send_coordinates">Send Coordinates</string>
    <string name="login_or_sign_up">Login or Sign Up</string>
    <string name="gps_tracking_application">GPS Tracking Application</string>
    <string name="error_required">The email address is mandatory</string>
    <string name="error_email_pattern">The provided address is not a valid one</string>
    <string name="error_unfilled">Please fill all inputs</string>
    <string name="error_wrong_credentials">The password is incorrect. Try again</string>
    <string name="missing_email_error">The email doesn\'t exist in the database</string>
    <string name="create_account">Create Account</string>
    <string name="password_verification">Password Verification</string>
    <string name="error_password_verification">The passwords don\'t match</string>
    <string name="email_taken">The email is already taken</string>
    <string name="error_required_password">The password field is mandatory</string>
    <string name="change_endpoint_url">Change endpoint URL</string>
    <string name="logout">Logout</string>
    <string name="change_endpoint_url_title">Change Endpoint URL</string>
    <string name="change_url">Change URL</string>
    <string name="cancel">Cancel</string>
    <string name="port">Port</string>
    <string name="ip_address_url">IP Address / URL</string>
    <string name="two_dots">:</string>
    <string name="ip_address">IP Address</string>
    <string name="connection_failed">The connection to the server has failed. Try again.</string>
    <string name="coordinates_success">Your coordinates have been successfully sent!</string>
    <string name="coordinates_error">An error occurred while getting the coordinates</string>
    <string name="made_with_at_utcn">Made with ❤ at UTCN</string>
    <string name="speed_0">Speed: 0</string>
    <string name="angle_0">Angle: 0</string>
    <string name="settings">Settings</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="search">Search</string>
    <string name="connect">Connect</string>
    <string name="ble_device_key">UTCN_Proiect_1</string>
    <string name="bluetooth_device">Bluetooth Device</string>
    <string name="title">Title</string>
    <string name="device_name">Device Name</string>
    <string name="device_address">Device Address</string>
    <string name="bluetooth_unsupported">Bluetooth is not supported</string>
    <string name="bluetooth_connected_not">Not connected to any Bluetooth device</string>
    <string name="conn_success">Connection successful!</string>
    <string name="conn_fail">Disconnection successful!</string>
</resources>